# culinary_ocean

./: .gitignore  Cargo.toml  DB_layout.mdj  Dockerfile  README.md  docker-compose.yml  prop_method.md  wireframing.drawio
app/: .env  Cargo.toml  main_make.toml
app/backend/: :w  Cargo.toml  Makefile.toml  models.rs
app/backend/db/: data.db
app/backend/migrations/2022-03-31-234214_create_posts/: up.sql
app/backend/src/: actions.rs  main.rs  models.rs  schema.rs
app/backend/static/: index-5834338e81666c0d.js  index-5834338e81666c0d_bg.wasm  index-60da1f8bc35e7282.js  index-6edf800f3788d25d.js  index.html  output-2cbc8193911bd42b.css
app/frontend/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  output.css  tailcomp.sh  tailwind.config.js  tailwind.css
app/frontend/src/: .yew_input_field.rs.swo  account.rs  login.rs  main.rs  route.rs  util.rs  yew_button.rs  yew_http.rs  yew_input_field.rs
app/frontend/src/account/: page_format.rs
doc/: CO_DB.mdj
doc/models/: wireframing.drawio
src/: main.rs
