[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["snowmang1 evanmdrake@icloud.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.6.1"
gloo-console = "0.2.1"
serde = "1"
serde_json = "1"
yew = "0.19"
yew-router = "0.16"
web-sys = "0.3.56"
reqwest = { version = "0.10", features = ["blocking", "json"] }
wasm-bindgen-futures = "0.4.29"
wasm-bindgen = "0.2.79"
