[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["snowmang1 evanmdrake@icloud.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.6.1"
gloo-utils = "0.1.3"
gloo-console = "0.2.1"
serde_json = "1"
yew = "0.19"
yew-router = "0.16"
web-sys = "0.3.56"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"]  }
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.30"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
